CSS/style.css
/* ... */
#gallery h2 {
  max-width: 1100px;
  margin: 0 auto;
}

#gallery .ghost-button {
  display: block;
  text-align: center;
  margin: 0 auto;
  font-size: 20px;
  vertical-align:middle;
}


/* Hamburger Menu */

.hamburger {
  float: right;
  margin: 10px 18px 0 0;
  padding: 10px;
}

.top-button {
  background: transparent;
  padding: 16px 16px 12px 16px;
  float: right;
}

#hamburger-dropdown li {
  font-size: 17px;
}

#hamburger-dropdown ul {
  list-style-type: none;
  display: inline;
  margin: 0 auto;
  padding: 0;
}

#hamburger-dropdown {
  position: absolute;
  float: left;
  background-color: #0f9a8c;
  margin: 0 30px 0 0;
  padding: 10px 0;
  width: 120px;
  border-radius: 5px;
  z-index: 999;
  right: 14px;
  display: none;
}

#hamburger-dropdown a {
  padding: 8px 0 8px 22px;
  color: #fff;
  width: 100%;
  display: block;
  font-family: 'Lato', sans-serif;
}

#hamburger-dropdown a:hover {
  background-color: #0b9083;
  border-radius: 5px;
  width: 100%;
}

.top-button i {
  color: #000;
  font-size: 22px;
}

/* Main styles */

ul {
  font-family: "Lato", sans-serif;
  line-height: 1.6em;
  font-size: 1.1em;
}

h1 {
   font-size: 4.8em;
   color: #fff;
   padding-bottom: 30px;
   padding-top: 20px;
   margin: 0;
   line-height: 1.15em;
   font-family: AlbraText-Bold;
   font-weight: normal;
   font-style: normal;
}

h2 {
  font-size: 2.8em;
  color: #222325;
  padding-top: 20px;
  padding-bottom: 15px;
  margin: 0;
  font-family: AlbraText-Semi;
  font-weight: normal;
  font-style: normal;
}

h3 {
  font-size: 2em;
  color: #222325;
  margin: 0;
  padding: 25px 0 10px 0;
  font-family: AlbraText-Semi;
  font-weight: normal;
  font-style: normal;
}

h4 {
  font-size: 1.6em;
  color: #222325;
  margin: 0;
  padding: 15px 0 10px 0;
  font-family: AlbraText-Semi;
  font-weight: normal;
  font-style: normal;
}

body {
  background-color: white;
  margin: 0px;
}

p {
  font-family: 'Lato', sans-serif;
  color: #fff;
  opacity: .9;
  font-size: 1.3em;
  margin: 0px;
  line-height: 1.5em;
  text-align: left;
}

a {
  text-decoration: none;
  color: #0f4e9a;
}

a:hover {
  color: #31bcb8;
}

.project-section ul {
  font-family: "Lato", sans-serif;
  line-height: 1.5em;
}

.pa4 {
  padding: 18px 20px  20px 20px;
}

.white-button {
  padding-left: 26px;
  padding-right: 26px;
  padding-top: 14px;
  padding-bottom: 14px;
  background-color: transparent;
  color: #fff;
  border-radius: 30px;
  border: 2px solid white;
  font-size: 1.1em;
  font-family: 'Lato', sans-serif;
}

.black-button {
  padding-left: 22px;
  padding-right: 22px;
  padding-top: 10px;
  padding-bottom: 10px;
  background-color: transparent;
  color: #000;
  border-radius: 30px;
  border: 2px solid #000;
  font-size: 1.1em;
  margin-top: 18px;
  font-family: 'Lato', sans-serif;
}

.ghost-button {
  background-color: #dbe2e6;
  padding: 10px 22px;
  color: #222325;
  border: none;
  border-radius: 100px;
  font-size: 1.1em;
  margin-top: 18px;
  font-family: 'Lato', sans-serif;
  transition: all .2s ease;
}

.ghost-button:hover {
  background-color: #0f4e9a;
  color: #fff;
  padding: 10px 22px;
  transition: all .2s ease;
}

#layout {
  display: block;
}

.nav-bar {
  background: transparent;
  margin: 0;
  width: 100%;
  z-index: 999;
}

.logo {
  float: left;
  padding: 0 0px 16px 0;
  min-width: 60px;
  width: 60px;
  margin: 20px 0 0 30px;
}

#hero {
  background-color: #0f4e9a;
  padding: 0 10%;
  overflow: hidden;
  display: flex;
}

.hero-content {
  max-width: 1100px;
  padding: 115px 0 160px 0;
  margin: 0 auto;
}

.hero-image {
  float: left;
  width: 40%;
  padding: 0 60px 30px 0;
  min-width: 320px;
  max-width: 400px;
}

.hero-text {
  float: left;
  width: 60%;
}

#projects {
    background-color: #ebf1f5;
    padding: 0 10%;
    overflow: hidden;
}

.projects {
  max-width: 1100px;
  margin: 0 auto;
  padding-top: 30px;
  padding-bottom: 65px;
}

.proj-tag {
  padding: 14px 0 0 0;
  color: #a6acaf;
  width: 100%;
  text-transform: uppercase;
  letter-spacing: 1px;
  font-size: .8em;
  font-family: "Lato", sans-sans-serif;
}

.grid-item {
  padding: 0 25px 25px 0;
  width: 100%;
}

.grid-col1 {
  float: left;
  width: 33%;
  min-width: 250px;
  padding: 10px 0 0px 0;
}

.grid-col2 {
  float: left;
  width: 33%;
  min-width: 250px;
  padding: 10px 0 0px 0;
}

.grid-col3 {
  float: left;
  width: 33%;
  min-width: 250px;
  padding: 10px 0 0px 0;
}

.card--radius {
  border-radius: 5px;
  min-height: 100%
}

.card-thumb {
  border-radius: 5px 5px 0 0;
  background-repeat: no-repeat;
  background: white;
  background-size: cover;
  background-position: center center;
  min-height: 140px;
}

.card {
  background-color: #fff;
  transition: all .2s ease;
}

.card:hover {
  transform: translateY(-2px);
  transition: all .2s ease;
  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.25);
}

.card h3 {
  font-family: 'Lato', sans-serif;
  color: #222325;
  font-weight: 600;
  font-size: 1.2em;
  padding: 0 0 5px 0;
  margin: 0;
}

.card p {
  font-size: 1em;
  color: #222325;
}

#about {
  background-color: #fff;
  padding: 30px 10% 60px;
  overflow: hidden;
}

.about-text {
  max-width: 1100px;
  margin: 0 auto;
}

.about-text h2 {
  color: #222325;
}

.about-text p {
  font-size: 1.2em;
  color: #222325;
}

.col1 {
  float: left;
  width: 60%;
  padding: 0 70px 30px 0;
}

.col2 {
  float: left;
  width: 40%;
}

.about-text ul {
  margin: 5px 0 0 0;
  padding: 0;
}

.about-text li {
  display: inline-block;
  font-size: 1em;
  background-color: #ebf1f5;
  margin: 6px 6px 6px 0;
  list-style: none;
  padding: 5px 15px 5px 15px;
  border-radius: 5px;
}

.experience-card {
  background-color: #ebf1f5;
  padding: 16px 16px 16px 22px;
  border-radius: 5px;
  margin: 4px 0 14px 0;
}

.experience-card h3 {
  font-family: 'Lato', sans-serif;
  font-weight: 600;
  font-size: 1.1em;
  margin: 0;
  padding: 6px 0 5px 0;
  color: #222325;
}

.experience-card p {
  font-size: 1em;
  color: #222325;
}
/* ... */

